<resources>
    <string name="app_name">Remind Me</string>
    <string name="activate_button">Start</string>
    <string name="button_start_label">Start</string>
    <string name="button_stop_label">Stop</string>
    <string name="button_reset_label">Reset</string>
    <string name="button_pause_label">Pause</string>
    <string name="button_resume_label">Resume</string>
    <string name="default_countdown_time">0:00</string>
    <string name="default_countdown_minutes">00</string>
    <string name="default_countdown_seconds">00</string>
    <string name="time_input_label">Time</string>
    <string name="message_input_label">Message</string>
    <string name="enter_message_hint">Notification Message</string>
    <string name="enter_minutes_hint">Minutes</string>
    <string name="enter_seconds_hint">Seconds</string>
    <string name="config_ok_button">OK</string>
    <string name="configure_dialog_activity">Configure Timer</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_default_message">Time\'s up!</string>
    <string name="notification_times_up_message">Time\'s up!</string>
    <string name="notification_initial_message">Ready</string>
    <string name="menu_button_counting_down_message">Counting Down</string>
    <string name="menu_button_configure">Configure</string>
    <string name="notification_state_counting_down">Counting Down</string>
    <string name="notification_state_ready">Ready</string>
    <string name="notification_state_paused">Paused</string>


    <string name="config_dialog_default_digit">0</string>
    <string name="time_delimiter">:</string>
    <string name="description_config_large_minute_increase_button">increase large minute digit</string>
    <string name="description_config_large_minute_decrease_button">decrease large minute digit</string>

    <string name="description_config_small_minute_increase_button">increase small minute digit</string>
    <string name="description_config_small_minute_decrease_button">decrease small minute digit</string>

    <string name="description_config_large_second_increase_button">increase large second digit</string>
    <string name="description_config_large_second_decrease_button">decrease large second digit</string>

    <string name="description_config_small_second_increase_button">increase small second digit</string>
    <string name="description_config_small_second_decrease_button">decrease small second digit</string>


</resources>